# bpm-ocr

./: Cargo.toml  LICENSE
src/: debug.rs  digit.rs  digit_extractor.rs  lcd_number_extractor.rs  lcd_screen_extractor.rs  lib.rs  main.rs  models.rs  rectangle.rs
