[package]
name = "bpm-ocr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A library for attempting to extract a blood pressure monitor reading from an image using opencv."
homepage = "https://www.github.com/happy0/bpm-ocr"
repository = "https://www.github.com/happy0/bpm-ocr"
readme = "README.md"
keywords = ["ocr", "opencv"]
categories = ["computer-vision"]

[dependencies]
chrono = "0.4.42"
opencv = "0.97.2"
