[package]
name = "bpm-ocr"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A library for attempting to extract a blood pressure monitor reading from an image using opencv."
homepage = "https://www.github.com/happy0/bpm-ocr"
repository = "https://www.github.com/happy0/bpm-ocr"
readme = "README.md"
keywords = ["ocr", "opencv"]
categories = ["computer-vision"]

[dependencies]
opencv = "0.97.2"
uuid = {version = "1.19.0", features = ["v4"]}